add all the updated files

--- a/index.html
+++ b/index.html
@@ -7,7 +7,21 @@
 </head>
 
 <body>
-    <script src="./app.js"></script>
+<div class="runningScore">
+    <span class="player-score"></span>
+    <span class="computer-score"></span>
+</div>
+<div class="container">
+    <button class="rock">Rock</button>
+    <button class="paper">Paper</button>
+    <button class="scissors">Scissors</button>
+</div>
+<div class="outcome">
+</div>
+
+<script src="./app.js"></script>
+
+
 </body>
 
 </html>
